# Administraci-n-de-Memoria-Parcial-No.-2-AVS

./: .dockerignore  .gitignore  CMakeLists.txt  DockerFIle  Dockerfile  README.md
allocation_simulator/: CMakeLists.txt
allocation_simulator/include/algorithms/: Allocation.h  BestFit.h  FirstFit.h  WorstFit.h
allocation_simulator/include/core/: MemoryManager.h
allocation_simulator/include/exceptions/: InsufficientMemoryException.h  InvalidCommandException.h  InvalidSizeException.h  ProcessNotFoundException.h  SimulatorException.h
allocation_simulator/include/io/: Command.h  SimulationFileReader.h
allocation_simulator/include/model/: MemoryBlock.h  Process.h
allocation_simulator/include/ui/: CliMenu.h  WebServer.h
allocation_simulator/src/: main.cpp
allocation_simulator/src/algorithms/: Allocation.cpp  BestFit.cpp  FirstFit.cpp  WorstFit.cpp
allocation_simulator/src/core/: MemoryManager.cpp
allocation_simulator/src/exceptions/: InsufficientMemoryException.cpp  InvalidCommandException.cpp  InvalidSizeException.cpp  ProcessNotFoundException.cpp  SimulatorException.cpp
allocation_simulator/src/io/: Command.cpp  SimulationFileReader.cpp  command.cpp
allocation_simulator/src/model/: MemoryBlock.cpp  Process.cpp
allocation_simulator/src/ui/: CliMenu.cpp  CliMenu.h  WebServer.cpp
allocation_simulator/web/: index.html
data/allocation/: example1.txt  example2.txt  example3.txt
data/translation/: example1.txt  example2.txt  example3.txt
translation_simulator/: CMakeLists.txt
translation_simulator/include/algorithms/: PagingStrategy.h  SegmentationStrategy.h  TranslationStrategy.h
translation_simulator/include/core/: MemoryTranslator.h  PageTable.h  SegmentTable.h
translation_simulator/include/exceptions/: InvalidAddressException.h  InvalidCommandException.h  PageFaultException.h  SegmentationFaultException.h  TranslatorException.h
translation_simulator/include/io/: TranslationCommand.h  TranslationFileReader.h
translation_simulator/include/model/: Frame.h  Page.h  PhysicalAddress.h  Segment.h  VirtualAddress.h
translation_simulator/include/ui/: CliMenu.h  WebServer.h
translation_simulator/src/: main.cpp
translation_simulator/src/algorithms/: PagingStrategy.cpp  SegmentationStrategy.cpp  TranslationStrategy.cpp
translation_simulator/src/core/: MemoryTranslator.cpp  PageTable.cpp  SegmentTable.cpp
translation_simulator/src/exceptions/: InvalidAddressException.cpp  InvalidCommandException.cpp  PageFaultException.cpp  SegmentationFaultException.cpp  TranslatorException.cpp
translation_simulator/src/io/: TranslationCommand.cpp  TranslationFileReader.cpp
translation_simulator/src/model/: Frame.cpp  Page.cpp  PhysicalAddress.cpp  Segment.cpp  VirtualAddress.cpp
translation_simulator/src/ui/: CliMenu.cpp  WebServer.cpp
translation_simulator/web/: index.html
