cmake_minimum_required(VERSION 3.16)
project(ParcialMemoria LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

add_compile_options(-Wall -Wextra -Wpedantic)

# httplib usa hilos internamente (el servidor corre en su propio hilo,
# separado del menu de consola), 
find_package(Threads REQUIRED)

add_subdirectory(allocation_simulator)
add_subdirectory(translation_simulator)